Fix being able to select text on iOS when ingame

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -3,6 +3,7 @@ body,
 #root {
   height: 100%;
   margin: 0;
+  user-select: none;
 }
 
 body {
@@ -26,6 +27,7 @@ body > canvas {
   left: 0;
   width: 100%;
   height: 100%;
+  user-select: none;
 }
 
 body > canvas .demo {
